controller/plugins/testdata/network/network_rbac.in.yml
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy
  namespace: default
spec:
  targetRef:
    group: networking.istio.io
    kind: Gateway
    name: default
  filters:
    networkRBAC:
      config:
        statPrefix: network_rbac
        matcher:
          matcher_tree:
            input:
              name: envoy.matching.inputs.source_ip
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.SourceIPInput
            exact_match_map:
              map:
                "127.0.0.1":
                  action:
                    name: action
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.rbac.v3.Action
                      name: allow-localhost
                      action: ALLOW
