controller/plugins/testdata/network/tls_inspector.in.yml
apiVersion: htnn.mosn.io/v1
kind: FilterPolicy
metadata:
  name: policy
  namespace: default
spec:
  targetRef:
    group: networking.istio.io
    kind: Gateway
    name: default
  filters:
    tlsInspector:
      config: {}
